--- a/frontend/src/base/landing.css
+++ b/frontend/src/base/landing.css
@@ -1,19 +1,43 @@
 #page-container {
     display: grid;
-    grid-template-rows: 300px 2fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 300px calc(100% - 300px);
+    grid-template-columns: 1fr;
 }
 
 #page-container h1 {
-    font-size: 3em;
-
+    font-size: 3.5em;
     grid-row: 1;
-    grid-column-start: 1;
-    grid-column-end: 4;
     justify-self: center;
     align-self: center;
 }
 
-.card {
+em {
+    color: var(--nord8);
+    font-style: normal;
+}
+
+#copy {
+    margin: 0;
+    height: 100%;
+    background-color: var(--nord3);
+    color: var(--nord6);
     grid-row: 2;
+
+    display: grid;
+    grid-template-rows: 100px calc(100% - 100px);
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+    text-align: center;
+    margin-top: 30px;
+    padding: 20px;
+}
+
+.card p {
+    background-color: var(--nord6);
+    color: var(--nord1);
+    border-radius: 5px;
+    box-shadow: 20px 20px 20px var(--nord1);
+    padding: 20px 5px;
 }
