--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,77 +1,74 @@
-@import url('https://fonts.googleapis.com/css?family=Nunito:300,400,600&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Nunito:300,400,600&display=swap");
 
 :root {
-    --nord0: #2e3440; /* Darkest Pale Navy */
-    --nord1: #3b4252; /* Darker Pale Navy */
-    --nord2: #434c5e; /* Dark Pale Navy */
-    --nord3: #4c566a; /* Pale Navy */
-    --nord4: #d8dee9; /* Mid Grey */
-    --nord5: #e5e9f0; /* Light Grey */
-    --nord6: #eceff4; /* Off-White */
-    --nord7: #8fbcbb; /* Aqua */
-    --nord8: #88c0d0; /* Blue / Turquoise */
-    --nord9: #81a1c1; /* Pale Blue */
-    --nord10: #5e81ac; /* Blue */
-    --nord11: #bf616a; /* Red */
-    --nord12: #d08770; /* Orange */
-    --nord13: #ebcb8b; /* Yellow */
-    --nord14: #a3be8c; /* Green */
-    --nord15: #b48ead; /* Purple */
+  --nord0: #2e3440; /* Darkest Pale Navy */
+  --nord10: #5e81ac; /* Blue */
+  --nord11: #bf616a; /* Red */
+  --nord12: #d08770; /* Orange */
+  --nord13: #ebcb8b; /* Yellow */
+  --nord14: #a3be8c; /* Green */
+  --nord15: #b48ead; /* Purple */
+  --nord1: #3b4252; /* Darker Pale Navy */
+  --nord2: #434c5e; /* Dark Pale Navy */
+  --nord3: #4c566a; /* Pale Navy */
+  --nord4: #d8dee9; /* Mid Grey */
+  --nord5: #e5e9f0; /* Light Grey */
+  --nord6: #eceff4; /* Off-White */
+  --nord7: #8fbcbb; /* Aqua */
+  --nord8: #88c0d0; /* Blue / Turquoise */
+  --nord9: #81a1c1; /* Pale Blue */
 }
 
 html {
-    background-color: var(--nord6);
-    color: var(--nord1);
-    font-family: 'Nunito', sans-serif;
+  background-color: var(--nord6);
+  color: var(--nord1);
+  font-family: "Nunito", sans-serif;
 }
 
 body {
-    height: 100vh;
-    margin: 0;
+  height: 100vh;
+  margin: 0;
 }
 
 #root {
-    height: 100%;
+  height: 100%;
 }
 
 #page-container {
-    height: 100%;
-    margin-top: 75px;
+  height: 100%;
+  margin-top: 75px;
 }
 
 nav {
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 100%;
-    background-color: var(--nord0);
-    color: var(--nord6);
-
-    display: grid;
-    grid-template-columns: 100px 200px 1fr;
+  background-color: var(--nord0);
+  color: var(--nord6);
+  display: grid;
+  grid-template-columns: 100px 200px 1fr;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100%;
 }
 
 nav img {
-    max-width: 70px;
-    margin: 10px;
-
-    justify-self: start;
-    align-self: center;
+  align-self: center;
+  justify-self: start;
+  margin: 10px;
+  max-width: 70px;
 }
 
 nav h2 {
-    align-self: center;
+  align-self: center;
 }
 
 .nav-links {
-    grid-column: 3;
-    grid-row: 1;
-    justify-self: end;
-    align-self: center;
+  align-self: center;
+  grid-column: 3;
+  grid-row: 1;
+  justify-self: end;
+  margin-right: 40px;
 }
 
-.nav-links a {
-    color: var(--nord6);
-    text-decoration: none;
-    margin: 20px;
+.nav-links button {
+  margin: 0 20px;
 }
