--- a/frontend/src/auth/auth.css
+++ b/frontend/src/auth/auth.css
@@ -13,6 +13,8 @@ label {
 
 .modal-main {
   background: white;
+  border-radius: 5px;
+  color: var(--nord1);
   height: auto;
   left: 50%;
   max-width: 750px;
@@ -21,6 +23,44 @@ label {
   top: 50%;
   transform: translate(-50%, -50%);
   width: 80%;
+}
+
+.modal-main h2 {
+  margin: 1em;
+}
+
+.modal-main .closeBtn {
+  position: absolute;
+  right: 15px;
+  top: 8px;
+}
+
+.fields {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 2em auto;
+  max-width: 560px;
+  padding: 0 3em;
+}
+
+.fields label {
+  flex-basis: 150px;
+  font-size: 1.15em;
+  margin: 0 20px 0.5em 0;
+}
+
+.fields input[type="email"],
+.fields input[type="text"],
+.fields input[type="password"] {
+  flex-grow: 2;
+  margin-bottom: 0.5em;
+  min-width: 60%;
+}
+
+form input[type="submit"] {
+  position: absolute;
+  right: 3em;
 }
 
 .display-block {
