--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,6 +69,28 @@ nav h2 {
   margin-right: 40px;
 }
 
-.nav-links button {
+.navBtn {
+  background-color: transparent;
+  border: none;
+  color: var(--nord6);
+  font-size: 1em;
   margin: 0 20px;
+}
+
+.actionBtn {
+  background-color: var(--nord8);
+  border-radius: 5px;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 1em;
+  font-weight: bold;
+  padding: 7px 10px;
+}
+
+.closeBtn {
+  background-color: transparent;
+  border: none;
+  color: var(--nord1);
+  font-size: 1.25em;
 }
