Bunch of stale changes - Add files to repository before restructure - Better architecture adopted with React - Will require refactoring

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -69,6 +69,10 @@ nav h2 {
   margin-right: 40px;
 }
 
+button {
+  cursor: pointer;
+}
+
 .navBtn {
   background-color: transparent;
   border: none;
