Add FormField component - Nice UI animation on label - Login functional, SignUp needs work - Small styling changes required yet on home screen

--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -1,12 +1,14 @@
 #page-container {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 300px calc(100% - 300px);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 300px 200px;
 }
 
 #page-container h1 {
   align-self: center;
   font-size: 3.5em;
+  grid-column-start: 1;
+  grid-column-end: 3;
   grid-row: 1;
   justify-self: center;
 }
@@ -14,30 +16,4 @@
 em {
   color: var(--nord8);
   font-style: normal;
-}
-
-#copy {
-  background-color: var(--nord3);
-  color: var(--nord6);
-  display: grid;
-  grid-row: 2;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 100px calc(100% - 100px);
-  height: 100%;
-  margin: 0;
-  padding: 0;
-}
-
-.card {
-  margin-top: 30px;
-  padding: 20px;
-  text-align: center;
-}
-
-.card p {
-  background-color: var(--nord6);
-  border-radius: 5px;
-  box-shadow: 20px 20px 20px var(--nord1);
-  color: var(--nord1);
-  padding: 20px 5px;
 }
