--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -1,14 +1,14 @@
 #page-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 300px 200px;
+  grid-template-rows: 300px 1fr;
 }
 
 #page-container h1 {
   align-self: center;
   font-size: 3.5em;
-  grid-column-start: 1;
   grid-column-end: 3;
+  grid-column-start: 1;
   grid-row: 1;
   justify-self: center;
 }
@@ -16,4 +16,49 @@
 em {
   color: var(--nord8);
   font-style: normal;
+}
+
+#login-form,
+#signup-form {
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 20px 20px 20px var(--nord4);
+  justify-self: center;
+  margin: 0 20px 0 20px;
+  max-height: 300px;
+  padding: 20px;
+  text-align: center;
+  width: 70%;
+}
+
+.flex-fields {
+  align-content: flex-start;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+}
+
+.float-container {
+  width: 48%;
+}
+
+#login-form .float-container:nth-child(3n) {
+  width: 100%;
+}
+
+#signup-form .float-container:nth-child(3n-2) {
+  width: 100%;
+}
+
+#login-form {
+  justify-self: start;
+}
+
+#signup-form {
+  justify-self: end;
+}
+
+#login-form input[type="submit"],
+#signup-form input[type="submit"] {
 }
