--- a/frontend/src/styles/forms.css
+++ b/frontend/src/styles/forms.css
@@ -3,16 +3,17 @@ label {
 }
 
 .float-container {
-  border-bottom: solid 1px #ccc;
+  border-bottom: solid 1px var(--nord3);
+  padding: 0;
   position: relative;
-  padding: 0 8px;
 }
 
 .float-container input {
   border: none;
   font-size: 16px;
   outline: 0;
-  padding: 16px 0 10px;
+  padding: 16px 0 5px;
+  width: 100%;
 }
 
 label {
@@ -24,5 +25,5 @@ label {
 }
 
 .float-container.active label {
-  transform: translate(0, 4px) scale(0.75);
+  transform: translate(0, 0px) scale(0.75);
 }
