--- a/frontend/src/styles/core.css
+++ b/frontend/src/styles/core.css
@@ -26,9 +26,15 @@ em {
   justify-self: center;
   margin: 0 20px 0 20px;
   max-height: 300px;
+  max-width: 400px;
   padding: 20px;
   text-align: center;
   width: 70%;
+  position: relative;
+}
+
+.fields {
+  padding: 35px 0;
 }
 
 .flex-fields {
@@ -37,10 +43,16 @@ em {
   flex-wrap: wrap;
   justify-content: space-between;
   width: 80%;
+  margin: 0 auto;
 }
 
-.float-container {
+#signup-form .float-container {
   width: 48%;
+}
+
+#login-form .float-container {
+  width: 80%;
+  margin: 0 auto;
 }
 
 #login-form .float-container:nth-child(3n) {
@@ -48,6 +60,10 @@ em {
 }
 
 #signup-form .float-container:nth-child(3n-2) {
+  width: 100%;
+}
+
+#signup-form .float-container:nth-child(5) {
   width: 100%;
 }
 
@@ -61,4 +77,7 @@ em {
 
 #login-form input[type="submit"],
 #signup-form input[type="submit"] {
+  position: absolute;
+  bottom: 20px;
+  right: 60px;
 }
