--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -6,6 +6,7 @@
   display: grid;
   grid-template-columns: 100px 200px 1fr;
   position: fixed;
+  z-index: 1;
   right: 0;
   top: 0;
   width: 100%;
@@ -74,5 +75,33 @@
     padding: 7px 10px;
     position: absolute;
     right: 60px;
+  }
+}
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
+  padding-top: 75px;
+  width: 150px;
+  background-color: $nord2;
+
+  &__links {
+    list-style-type: none;
+    margin: 1.5em 0;
+  }
+
+  &__link {
+    color: $nord4;
+    text-decoration: none;
+  }
+}
+
+.dashboard {
+  padding-top: 75px;
+
+  &__heading {
+    text-align: center;
   }
 }
