--- a/frontend/src/styles/core.scss
+++ b/frontend/src/styles/core.scss
@@ -87,7 +87,7 @@
   margin: 0;
   padding-top: 75px;
   width: 150px;
-  background-color: $nord2;
+  background-color: $nord1;
 
   &__links {
     list-style-type: none;
@@ -97,6 +97,10 @@
   &__link {
     color: $nord4;
     text-decoration: none;
+
+    &--active {
+      color: $nord8;
+    }
   }
 }
 
